Legger til path for tjenestepensjon Q1

--- a/docs/api/tjenestepensjon/tpregisteret-api.yaml
+++ b/docs/api/tjenestepensjon/tpregisteret-api.yaml
@@ -9,6 +9,7 @@ info:
   contact: {}
   version: '1.0'
 servers:
+  - url: https://pensjon-q1-gw.ekstern.dev.nav.no/tjenestepensjon
   - url: https://pensjon-gw.ekstern.dev.nav.no/tjenestepensjon
   - url: https://pensjon-gw.nav.no/tjenestepensjon
 security:
