Oppdatert dokumentasjon for tpregisteret.
Co-authored-by: Jens Chr. Madsen <Jens.Christian.Madsen@nav.no>

--- a/docs/api/tjenestepensjon/tpregisteret-api.yaml
+++ b/docs/api/tjenestepensjon/tpregisteret-api.yaml
@@ -9,7 +9,7 @@ info:
   contact: {}
   version: '1.0'
 servers:
-  - url: https://pensjon-q1-gw.ekstern.dev.nav.no/tjenestepensjon
+  - url: https://pensjon-q1-gw.ekstern.dev.nav.no/tjenestepensjon/q1
   - url: https://pensjon-gw.ekstern.dev.nav.no/tjenestepensjon
   - url: https://pensjon-gw.nav.no/tjenestepensjon
 security:
