--- a/docs/api/afpprivat/harAFPoffentlig.yaml
+++ b/docs/api/afpprivat/harAFPoffentlig.yaml
@@ -65,9 +65,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BooleanResult'
+        401:
+          description: Ugyldig aksesstoken til tjenesten.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Get401ApplicationJsonResponse'
+        403:
+          description: Autorisering til ressurs feilet, feks feil scope i token
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Get403ApplicationJsonResponse'
       deprecated: true
+
 components:
   schemas:
+    Get401ApplicationJsonResponse: {}
+    Get403ApplicationJsonResponse: {}
     BooleanResult:
       title: Result
       type: object
