Endret beskrivelse, feilmeldinger.
Co-authored-by: Jens Chr. Madsen <Jens.Christian.Madsen@nav.no>
Co-authored-by: Mathias Sand Jahren <the.mather1@gmail.com>

--- a/docs/api/afpprivat/harAFPoffentlig.yaml
+++ b/docs/api/afpprivat/harAFPoffentlig.yaml
@@ -40,6 +40,18 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BooleanResult'
+        401:
+          description: Ugyldig aksesstoken til tjenesten.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Get401ApplicationJsonResponse'
+        403:
+          description: Autorisering til ressurs feilet, feks feil scope i token
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Get403ApplicationJsonResponse'
       deprecated: false
   /afpoffentlig/get:
     get:
