--- a/docs/api/tjenestepensjon/tpregisteret-api.yaml
+++ b/docs/api/tjenestepensjon/tpregisteret-api.yaml
@@ -6,6 +6,9 @@ info:
     og innsyn i registrerte tjenestepensjonsforhold og ytelser.
 
     For å kunne bruke tjenesten må scope i autentiseringen mot Maskinporten settes til: `nav:pensjon/v1/tpregisteret`
+    
+    Opprettelse av ytelse av type `UFORE` eller `GJENLEVENDE` vil det ikke returneres vedtakopplysninger.
+    Dette må hentes med hentSamordningsdata (SOAP)
   contact: {}
   version: '1.0'
 servers:
