--- a/docs/api/afpgrunnlagbeholdning/afp-grunnlag-beholdning-api.yaml
+++ b/docs/api/afpgrunnlagbeholdning/afp-grunnlag-beholdning-api.yaml
@@ -12,8 +12,11 @@ paths:
   /opptjening/afp/beholdningsgrunnlag/beregn:
     post:
       description: "Beregner AFP beholdningsgrunnlag for angitt personId fra og med angitt uttaksDato. 
-                    \n\nKrever audience-restricted maskinportentoken for ressurs: https://server-url/opptjening/afp/beholdningsgrunnlag og scope: nav:pensjonopptjening:ekstern.afp.beholdningsgrunnlag.beregn.read. 
-                    \nDersom man bruker delegert tilgang via Altinn er scope: nav:pensjonopptjening/afpbeholdningsgrunnlag/beregn.read"
+                    \n\nKrever audience-restricted maskinportentoken for:
+                      \n  ressurs: https://server-url/opptjening/afp/beholdningsgrunnlag
+                      \n  scope: nav:pensjonopptjening:ekstern.afp.beholdningsgrunnlag.beregn.read. 
+                    \n\nDersom man bruker delegert tilgang via Altinn:
+                      \n  scope: nav:pensjonopptjening/afpbeholdningsgrunnlag/beregn.read"
       security:
         - bearerAuth: [ ]
       operationId: beregn
@@ -74,9 +77,12 @@ paths:
                     \nKonsekvensen av dette er at det spesielt er to scenarioer man må være klar over:
                     \n  1. Oppgitt 'FremtidigInntekt' for (inneværende år - 1) vil ikke bli benyttet i simuleringen dersom opptjeningsregisteret allerede har registrert inntekter for dette året. Her vil opptjeningsregisterets inntekter benyttes.
                     \n  2. Dersom man kun oppgir 'FremtidigInntekt' fra og med inneværende år eller senere, vil det kunne oppstå et hull i inntektene dersom opptjeningsregisteret ikke har mottatt inntekter fra Skatteetaten for (inneværende år - 1).                          
-                    \nnNB! Grunnlag med fraOgMedDato senere enn siste kjente grunnbeløpsendring vil ikke være lønnsvekstregulert - se https://www.nav.no/grunnbelopet.                                    
-                    \n\n\nKrever audience-restricted maskinportentoken for ressurs: https://server-url/opptjening/afp/beholdningsgrunnlag og scope: nav:pensjonopptjening:ekstern.afp.beholdningsgrunnlag.simuler.read. 
-                    \nDersom man bruker delegert tilgang via Altinn er scope: nav:pensjonopptjening/afpbeholdningsgrunnlag/simuler.read"
+                    \n\nNB! Grunnlag med fraOgMedDato senere enn siste kjente grunnbeløpsendring vil ikke være lønnsvekstregulert - se https://www.nav.no/grunnbelopet.                                    
+                    \n\n\nKrever audience-restricted maskinportentoken for:
+                    \n  ressurs: https://server-url/opptjening/afp/beholdningsgrunnlag
+                    \n  scope: nav:pensjonopptjening:ekstern.afp.beholdningsgrunnlag.simuler.read. 
+                    \n\nDersom man bruker delegert tilgang via Altinn: 
+                    \n  scope: nav:pensjonopptjening/afpbeholdningsgrunnlag/simuler.read"
       security:
         - bearerAuth: [ ]
       operationId: simuler
